# BackendApi/routes/userRoutes.js
@@ -6,31 +6,28 @@ const express = require("express");
 const { verifyJWT } = require("../auth/user.auth.middleware.js");
 const pimdController = require("../controllers/pimdController.js");
 const {
-  signInpimd,
-  // createProduct,
+  signin,
   createagency,
-  createMetadata,
-  // getProductById,
-  getMetaDataByProductName,
-  getagencyById,
-  // updateProduct,
   updateagency,
-  updatedMetadata,
-  // deleteProduct,
-  deleteMetadata,
   deleteagency,
   getagency,
-  // searchMetaData,
-  getMetaData,
-  // getProduct,
-  // getMetaDataByVersion,
   createUser,
   getUser,
-  getUserByUsername,
   deleteUser,
   updateUser,
-  updateroles,
-  getMetaDataByAgency
+  // createProduct,
+  // createMetadata,
+  // getProductById,
+  // getMetaDataByProductName,
+  // updateProduct,
+  // updatedMetadata,
+  // deleteProduct,
+  // deleteMetadata,
+  // searchMetaData,
+  // getMetaData,
+  // getProduct,
+  // getMetaDataByVersion,
+  // getMetaDataByAgency
 } = pimdController;
 const router = express.Router();
 
@@ -38,46 +35,38 @@ const app = express();
 
 app.use(express.json());
 
-// router.route("/pimd/meta/search").get(searchMetaData); 
 
 
-router.route("/signin").post(signInpimd);
+//SIGNIN
+router.route("/signin").post(signin);
 
+//USER
 router.route("/pimd/user").post(verifyJWT,createUser); 
-router.route("/pimd/user").get(verifyJWT,getUser); 
-
-router.route("/pimd/user/:username").get(verifyJWT,getUserByUsername); 
+router.route("/pimd/user").get(verifyJWT,getUser);  
 router.route("/pimd/user/:username").delete(verifyJWT,deleteUser); 
-
 router.route("/pimd/user/:username").put(verifyJWT,updateUser); 
-router.route("/pimd/user/:username/roles").patch(verifyJWT, updateroles); 
 
+//AGENCY
 router.route("/pimd/agency").post(verifyJWT, createagency);
-router.route("/pimd/agency/:agency_name").delete(verifyJWT, deleteagency); 
-
-router.route("/pimd/agency/:agency_name").get(verifyJWT, getagencyById); 
+router.route("/pimd/agency/:agency_name").delete(verifyJWT, deleteagency);  
 router.route("/pimd/agency").get(verifyJWT, getagency); 
-router.route("/pimd/agency/:agency_name").put(verifyJWT, updateagency); 
+router.route("/pimd/agency/:agency_name").put(verifyJWT, updateagency);
 
 
 
+// router.route("/pimd/meta/search").get(searchMetaData); 
 // router.route("/pimd/product").post(verifyJWT, createProduct); 
 // router.route("/pimd/product/:productId").get(verifyJWT, getProductById); 
 // router.route("/pimd/product").get(verifyJWT, getProduct); 
 // router.route("/pimd/product/:id").put(verifyJWT, updateProduct); 
 // router.route("/pimd/product/:id").delete(verifyJWT, deleteProduct); 
-
-
 // router.route("/pimd/metadata/version").get(verifyJWT, getMetaDataByVersion); 
-router.route("/pimd/metadata/:Product").get(verifyJWT, getMetaDataByProductName);
-
-// router.route("/pimd/metadata/:product_id").put(verifyJWT, updatedMetadata); 
-router.route("/pimd/metadata/:product").delete(verifyJWT, deleteMetadata);
-
-
-router.route("/pimd/metadata").post(verifyJWT, createMetadata); 
-router.route("/pimd/metadata").get(getMetaData);
-router.route("/pimd/metadata/:agency_name").get(verifyJWT, getMetaDataByAgency); 
+// router.route("/pimd/metadata/:Product").get(verifyJWT, getMetaDataByProductName);
+// // router.route("/pimd/metadata/:product_id").put(verifyJWT, updatedMetadata); 
+// router.route("/pimd/metadata/:product").delete(verifyJWT, deleteMetadata);
+// router.route("/pimd/metadata").post(verifyJWT, createMetadata); 
+// router.route("/pimd/metadata").get(getMetaData);
+// router.route("/pimd/metadata/:agency_name").get(verifyJWT, getMetaDataByAgency); 
 
 
 
